sec: add auth gate, schema validation, connector hardening; pin deps

--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -8,4 +8,9 @@ TABLE_JOBS = "analytics.lending.jobs"
 TABLE_PRODUCT_METRICS = "analytics.lending.product_metrics"
 TABLE_ELIGIBILITY = "analytics.lending.eligibility"
 
+# Gate de autenticação simples do app
+# Para habilitar, defina AUTH_ENABLED=true e escolha uma senha
+AUTH_ENABLED = false
+AUTH_PASSWORD = "troque-esta-senha"
+
 
