--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit>=1.37.0
-pandas>=2.0.0
-numpy>=1.24.0
-scikit-learn>=1.3.0
-plotly>=5.20.0
-databricks-sql-connector>=3.0.0
-python-dotenv>=1.0.0
+streamlit==1.37.1
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.5.1
+plotly==5.24.0
+databricks-sql-connector==3.3.0
+python-dotenv==1.0.1
+pandera==0.18.3
 
 
